--- a/pointers/03.pointer_info.md
+++ b/pointers/03.pointer_info.md
@@ -3,3 +3,36 @@ p++ - move pointer to next element
 •p+k  gives address of kth element form pointer location to right
 •p-k  gives address of kth element from pointer location to left
 •q-p  gives number of elements between 2 pointers p and q
+
+
+why pointer? 
+1.Programs can only access heap with the help of pointers
+2.File in the disk can be accessed through the pointer 
+
+
+ _______________________
+|                       |
+|                       |  Heap
+| ______________________|                      
+|                       |
+|                       |Stack 
+|________________________|                       |
+|                       |
+|                       |code section 
+|_______________________|               
+
+
+Heap Memory Allocation 
+- dynamically 
+
+main()
+{
+int A[5]={1,2,3,4,5};  //stack 
+int *p;   //heap
+p=new int [5];  //heap 
+}
+
+stack memory will delete after the scope 
+Heap memory will stay still the program running ends 
+      * must be dellocated 
+
