--- a/OOPS/01.intro.md
+++ b/OOPS/01.intro.md
@@ -1,9 +1,20 @@
 Object orientation is a strategy of writing programs/software just as there are other strategies for writing programs. Other methodologies include structured 
 programming, procedural programming, modular programming, aspect oriented programming.
 
+OOPS is for programmers not for the users 
+
 Principles of Object_Orientation
 1. Abstraction
 2. Encapsulation
       * Data Hiding 
 3. Inheritance 
 4. Polymorphims
+
+
+class and object 
+
+It is said that everything in the world is an object and there is some class for it most probably. Let's find out more. Class means to classify and we can take any object in the world and it has to belong to some class, even if it doesn't begins to any class then it means that it belongs to class of objects which do not fit into any other existing classes.
+
+Other example of class can be CSE, ECE, EEE, MECH, CIVIL branches in an engineering college. Classification is based on criteria we adopt. Classification can be of multiple kinds like student and employee, day scholar and hosteller, 9 pointer and one who gets to sleep in dorm room...wait those are same things nvm..you get the idea I have a feeling.
+
+Class is a definition how something should be if it is made from the class, in a sense it is a blueprint. Object is the instance. Say Car is a class and BMW is an instance of it. Blueprint is made once but from that multiple houses are made which are identical in a housing board colony. That means that blueprint is a class telling how every house, an object should be and identical houses or objects are created from that. Data and function together make up a class. We can create class for kind of object we want as per our needs and then create some instances of those classes we made to proceed as per our coding requirement.
